--- a/_includes/sidelist-programming/programming-cpp.html
+++ b/_includes/sidelist-programming/programming-cpp.html
@@ -3,59 +3,98 @@
         <li><a href="{{ site.cpp }}user-guide/getting-started.html" class="otherLinkColour">User Guide</a></li>
         <li><a href="{{ site.cpp_api }}" class="otherLinkColour">API Reference</a>
             <ul>
-                <li><a>dynamsoft::cvr</a>
+                <li><a href="{{ site.cpp_methods }}" class="otherLinkColour">Primary Classes</a>
                     <ul>
+                        <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/capture-vision-router.html" class="otherLinkColour">CCaptureVisionRouter</a>
+                            <ul>
+                                <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/instantiate.html" class="otherLinkColour">Constructor and Destructor</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/single-file-processing.html" class="otherLinkColour">Single-File Processing</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/multiple-file-processing.html" class="otherLinkColour">Multiple-File Processing</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/settings.html" class="otherLinkColour">Settings</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/intermediate-result.html" class="otherLinkColour">Intermediate Result</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}capture-vision-router/auxiliary-methods.html" class="otherLinkColour">Auxiliary</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="{{ site.dcv_cpp_methods }}license/license-manager.html" class="otherLinkColour">CLicenseManager</a></li>
                     </ul>
                 </li>
-                <li><a>dynamsoft::basic_structures</a>
+                <li><a>Auxiliary Classes</a>
                     <ul>
-                        <li><a href="{{ site.cpp_api }}CPoint.html" class="otherLinkColour">CPoint</a></li>
-                        <li><a href="{{ site.cpp_api }}CContour.html" class="otherLinkColour">CContour</a></li>
-                        <li><a href="{{ site.cpp_api }}CCorner.html" class="otherLinkColour">CCorner</a></li>
-                        <li><a href="{{ site.cpp_api }}CEdge.html" class="otherLinkColour">CEdge</a></li>
-                        <li><a href="{{ site.cpp_api }}CLineSegment.html" class="otherLinkColour">CLineSegment</a></li>
-                        <li><a href="{{ site.cpp_api }}CQuadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
-                        <li><a href="{{ site.cpp_api }}CRect.html" class="otherLinkColour">CRect</a></li>
-                        <li><a href="{{ site.cpp_api }}CImageTag.html" class="otherLinkColour">CImageTag</a></li>
-                        <li><a href="{{ site.cpp_api }}CFileImageTag.html" class="otherLinkColour">CFileImageTag</a></li>
-                        <li><a href="{{ site.cpp_api }}CVideoFrameTagt.html" class="otherLinkColour">CVideoFrameTag</a></li>
-                        <li><a href="{{ site.cpp_api }}CImageData.html" class="otherLinkColour">CImageData</a></li>
-                        <li><a href="{{ site.cpp_api }}CVideoFrameTag.html" class="otherLinkColour">CVideoFrameTag</a></li>
-                        <li><a href="{{ site.cpp_api }}CCapturedResult.html" class="otherLinkColour">CCapturedResult</a></li>
-                        <li><a href="{{ site.cpp_api }}CCapturedResultItem.html" class="otherLinkColour">CCapturedResultItem</a></li>
+                        <li><a>Basic Classes</a>
+                            <ul>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CPoint.html" class="otherLinkColour">CPoint</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CContour.html" class="otherLinkColour">CContour</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CCorner.html" class="otherLinkColour">CCorner</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CEdge.html" class="otherLinkColour">CEdge</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CLineSegment.html" class="otherLinkColour">CLineSegment</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CQuadrilateral.html" class="otherLinkColour">CQuadrilateral</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CRect.html" class="otherLinkColour">CRect</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CImageTag.html" class="otherLinkColour">CImageTag</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CFileImageTag.html" class="otherLinkColour">CFileImageTag</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CVideoFrameTagt.html" class="otherLinkColour">CVideoFrameTag</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CImageData.html" class="otherLinkColour">CImageData</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CVideoFrameTag.html" class="otherLinkColour">CVideoFrameTag</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CCapturedResult.html" class="otherLinkColour">CCapturedResult</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/basic-structures/CCapturedResultItem.html" class="otherLinkColour">CCapturedResultItem</a></li>
+
+                                <li><a href="{{ site.cpp_api }}detected-quad-result-item.html" class="otherLinkColour">CDetectedQuadResultItem</a></li>
+                                <li><a href="{{ site.cpp_api }}detected-quads-result.html" class="otherLinkColour">CDetectedQuadsResult</a></li>
+                                <!-- <li><a href="{{ site.cpp_api }}detected-quads-result-array.html" class="otherLinkColour">CDetectedQuadsResultArray</a></li>-->
+                                <li><a href="{{ site.cpp_api }}normalized-image-result-item.html" class="otherLinkColour">CNormalizedImageResultItem</a></li>
+                                <li><a href="{{ site.cpp_api }}normalized-images-result.html" class="otherLinkColour">CNormalizedImagesResult</a></li>
+                                <!-- <li><a href="{{ site.cpp_api }}normalized-images-result-array.html" class="otherLinkColour">CNormalizedImagesResultArray</a></li>-->
+                            </ul>
+                        </li>
+                        <li><a>Intermediate Result Classes</a>
+                            <ul>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/binary-image-unit.html" class="otherLinkColour">CBinaryImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/colour-image-unit.html" class="otherLinkColour">CColourImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/contours-unit.html" class="otherLinkColour">CContoursUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/enhanced-grayscale-image-unit.html" class="otherLinkColour">CEnhancedGrayscaleImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/grayscale-image-unit.html" class="otherLinkColour">CGrayscaleImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/intermediate-result-manager.html" class="otherLinkColour">CIntermediateResultManager</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/intermediate-result-receiver.html" class="otherLinkColour">CIntermediateResultReceiver</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/intermediate-result-unit.html" class="otherLinkColour">CIntermediateResultUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/line-segments-unit.html" class="otherLinkColour">CLineSegmentsUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/predetected-region-element.html" class="otherLinkColour">CPredetectedRegionElement</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/predetected-regions-unit.html" class="otherLinkColour">CPredetectedRegionsUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/region-object-element.html" class="otherLinkColour">CRegionObjectElement</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/scaled-down-colour-image-unit.html" class="otherLinkColour">CScaledDownColourImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/text-removed-binary-image-unit.html" class="otherLinkColour">CTextRemovedBinaryImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/text-zones-unit.html" class="otherLinkColour">CTextZonesUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/texture-detection-result-unit.html" class="otherLinkColour">CTextureDetectionResultUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/texture-removed-binary-image-unit.html" class="otherLinkColour">CTextureRemovedBinaryImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/texture-removed-grayscale-image-unit.html" class="otherLinkColour">CTextureRemovedGrayscaleImageUnit</a></li>
+                                <li><a href="{{ site.dcv_cpp_methods }}core/intermediate-results/transformed-grayscale-image-unit.html" class="otherLinkColour">CTransformedGrayscaleImageUnit</a></li>
+                                
+                                <li><a href="{{ site.cpp_api }}candidate-quad-edges-unit.html" class="otherLinkColour">CCandidateQuadEdgesUnit</a></li>
+                                <li><a href="{{ site.cpp_api }}corners-unit.html" class="otherLinkColour">CCornersUnit</a></li>
+                                <li><a href="{{ site.cpp_api }}detected-quad-element.html" class="otherLinkColour">CDetectedQuadElement</a></li>
+                                <li><a href="{{ site.cpp_api }}detected-quads-unit.html" class="otherLinkColour">CDetectedQuadsUnit</a></li>
+                                <li><a href="{{ site.cpp_api }}long-lines-unit.html" class="otherLinkColour">CLongLinesUnit</a></li>
+                                <li><a href="{{ site.cpp_api }}normalized-image-element.html" class="otherLinkColour">CNormalizedImageElement</a></li>
+                                <li><a href="{{ site.cpp_api }}normalized-image-unit.html" class="otherLinkColour">CNormalizedImageUnit</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
-                <li><a>dynamsoft::ddn</a>
+                <li><a href="{{ site.enumerations }}?src=cpp" class="otherLinkColour">Enumerations</a>
                     <ul>
-                        <li><a href="{{ site.cpp_api }}detected-quad-result-item.html" class="otherLinkColour">CDetectedQuadResultItem</a></li>
-                        <li><a href="{{ site.cpp_api }}detected-quads-result.html" class="otherLinkColour">CDetectedQuadsResult</a></li>
-                        <!-- <li><a href="{{ site.cpp_api }}detected-quads-result-array.html" class="otherLinkColour">CDetectedQuadsResultArray</a></li>-->
-                        <li><a href="{{ site.cpp_api }}normalized-image-result-item.html" class="otherLinkColour">CNormalizedImageResultItem</a></li>
-                        <li><a href="{{ site.cpp_api }}normalized-images-result.html" class="otherLinkColour">CNormalizedImagesResult</a></li>
-                        <!-- <li><a href="{{ site.cpp_api }}normalized-images-result-array.html" class="otherLinkColour">CNormalizedImagesResultArray</a></li>-->
-                    </ul>
-                </li>
-                <li><a>dynamsoft::intermediate_results</a>
-                    <ul>
-                        <li><a href="{{ site.cpp_api }}intermediate-result-unit.html" class="otherLinkColour">CIntermediateResultUnit</a></li>
-                    </ul>
-                </li>
-                <li><a>dynamsoft::ddn::intermediate_results</a>
-                    <ul>
-                        <li><a href="{{ site.cpp_api }}candidate-quad-edges-unit.html" class="otherLinkColour">CCandidateQuadEdgesUnit</a></li>
-                        <li><a href="{{ site.cpp_api }}corners-unit.html" class="otherLinkColour">CCornersUnit</a></li>
-                        <li><a href="{{ site.cpp_api }}detected-quad-element.html" class="otherLinkColour">CDetectedQuadElement</a></li>
-                        <li><a href="{{ site.cpp_api }}detected-quads-unit.html" class="otherLinkColour">CDetectedQuadsUnit</a></li>
-                        <li><a href="{{ site.cpp_api }}long-lines-unit.html" class="otherLinkColour">CLongLinesUnit</a></li>
-                        <li><a href="{{ site.cpp_api }}normalized-image-element.html" class="otherLinkColour">CNormalizedImageElement</a></li>
-                        <li><a href="{{ site.cpp_api }}normalized-image-unit.html" class="otherLinkColour">CNormalizedImageUnit</a></li>
-                    </ul>
-                </li>
-                <li><a>Enumerations</a>
-                    <ul>
-                        <li><a href="{{ site.enumerations }}captured-result-item-type.html" class="otherLinkColour">CapturedResultItemType</a></li>
-                        <li><a href="{{ site.enumerations }}error-code.html" class="otherLinkColour">ErrorCode</a></li>
-                        <li><a href="{{ site.enumerations }}image-pixel-format.html?src=cpp" class="otherLinkColour">ImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}core/buffer-overflow-protection-mode.html?src=cpp" class="otherLinkColour">BufferOverflowProtectionMode</a></li>
+                        <li><a href="{{ site.enumerations }}core/capture-result-item-type.html?src=cpp" class="otherLinkColour">CaptureResultItemType</a></li>
+                        <li><a href="{{ site.enumerations }}core/corner-type.html?src=cpp" class="otherLinkColour">CornerType</a></li>
+                        <li><a href="{{ site.enumerations }}core/error-code.html?src=cpp" class="otherLinkColour">ErrorCode</a></li>
+                        <li><a href="{{ site.enumerations }}core/grayscale-transformation-mode.html?src=cpp" class="otherLinkColour">GrayscaleTransformationMode</a></li>
+                        <li><a href="{{ site.enumerations }}core/image-capture-distance-mode.html?src=cpp" class="otherLinkColour">ImageCaptureDistanceMode</a></li>
+                        <li><a href="{{ site.enumerations }}core/image-pixel-format.html?src=cpp" class="otherLinkColour">ImagePixelFormat</a></li>
+                        <li><a href="{{ site.enumerations }}core/image-source-state.html?src=cpp" class="otherLinkColour">ImageSourceState</a></li>
+                        <li><a href="{{ site.enumerations }}core/image-tag-type.html?src=cpp" class="otherLinkColour">ImageTagType</a></li>
+                        <li><a href="{{ site.enumerations }}core/intermediate-result-unit-type.html?src=cpp" class="otherLinkColour">IntermediateResultUnitType</a></li>
+                        <li><a href="{{ site.enumerations }}core/pdf-reading-mode.html?src=cpp" class="otherLinkColour">PDFReadingMode</a></li>
+                        <li><a href="{{ site.enumerations }}core/region-object-element-type.html?src=cpp" class="otherLinkColour">RegionObjectElementType</a></li>
+                        <li><a href="{{ site.enumerations }}core/section-type.html?src=cpp" class="otherLinkColour">SectionType</a></li>
+                        <li><a href="{{ site.enumerations }}core/target-type.html?src=cpp" class="otherLinkColour">TargetType</a></li>
+                        <li><a href="{{ site.enumerations }}core/video-frame-quality.html?src=cpp" class="otherLinkColour">VideoFrameQuality</a></li>
                     </ul>
                 </li>
             </ul>
