--- a/_includes/sidelist-development.html
+++ b/_includes/sidelist-development.html
@@ -6,7 +6,7 @@
     <ul>
         <li><a target="_blank" href="{{ site.android }}" class="otherLinkColour refreshLink">Android</a></li>
         <li><a target="_blank" href="{{ site.oc }}" class="otherLinkColour refreshLink">iOS</a></li>
-        <li><a target="_blank" href="https://www.dynamsoft.com/capture-vision/docs/programming/xamarin/?ver=latest" class="otherLinkColour refreshLink">Xamarin.Forms</a></li>
+        <li><a target="_blank" href="{{ site.xamarin }}" class="otherLinkColour refreshLink">Xamarin.Forms</a></li>
     </ul>
 </li>
 <li>
