add ddn parameter reference index

--- a/_includes/sidelist-parameters-reference.html
+++ b/_includes/sidelist-parameters-reference.html
@@ -1,4 +1,4 @@
-<li><a href="{{ site.parameters_reference }}" class="otherLinkColour">Parameter Reference</a>
+<li><a href="{{ site.parameters_reference_ddn }}" class="otherLinkColour">Parameter Reference</a>
     <ul>
         <li><a class="otherLinkColour ">Capture Vision Template</a>
             <ul>
