--- a/_includes/sidelist-development.html
+++ b/_includes/sidelist-development.html
@@ -1,6 +1,6 @@
 <li class="category">DEVELOPMENT</li>
 <li>
-    <a target="_blank" href="{{ site.js }}" class="otherLinkColour refreshLink">Web (Client Side)</a></li>
+    <a target="_blank" href="{{ site.javascript }}" class="otherLinkColour refreshLink">Web (Client Side)</a></li>
 <li>
     <a class="otherLinkColour">Mobile</a>
     <ul>
