check index page menu item

--- a/_includes/sidelist-introduction.html
+++ b/_includes/sidelist-introduction.html
@@ -1,2 +1,4 @@
+<li style="display:none;"><a href="{{ site.docHomePage }}index.html" class="otherLinkColour">Index</a>
+</li>
 <li><a href="{{ site.introduction }}" class="otherLinkColour">Introduction</a>
 </li>
