--- a/_includes/sidelist-development-v1.0.21.html
+++ b/_includes/sidelist-development-v1.0.21.html
@@ -5,7 +5,7 @@
     <a class="otherLinkColour">Mobile</a>
     <ul>
         <li><a target="_blank" href="{{ site.android }}" class="otherLinkColour refreshLink">Android</a></li>
-        <li><a target="_blank" href="{{ site.oc }}" class="otherLinkColour refreshLink">iOS</a></li>
+        <li><a target="_blank" href="{{ site.ios }}" class="otherLinkColour refreshLink">iOS</a></li>
         <li><a target="_blank" href="{{ site.xamarin }}" class="otherLinkColour refreshLink">Xamarin.Forms</a></li>
     </ul>
 </li>
