--- a/_includes/sidelist-parameters-organization.html
+++ b/_includes/sidelist-parameters-organization.html
@@ -1,23 +1,65 @@
-<li><a href="{{ site.parameters }}file/index.html" class="otherLinkColour">Parameter Organization</a>
-    <ul>
-            <li><a href="{{ site.parameters }}file/capture-vision-template.html" class="otherLinkColour">CaptureVisionTemplate Object</a></li>
-            <li><a href="{{ site.parameters }}file/image-source.html" class="otherLinkColour">ImageSource Object</a></li>
-            <li><a href="{{ site.parameters }}file/target-roi-definition/index.html" class="otherLinkColour">TargetROIDef Object</a>
-                    <ul>
-                            <li><a href="{{ site.parameters }}file/target-roi-definition/location/index.html" class="otherLinkColour">Location</a></li>
-                            <li><a href="{{ site.parameters }}file/target-roi-definition/location/reference-object-filter.html" class="otherLinkColour">Reference Object Filter</a></li>
-                    </ul>
-            </li>
-            <li><a href="{{ site.parameters }}file/task-settings/index.html" class="otherLinkColour">Task Settings</a>
-                    <ul>
-                            <li><a href="{{ site.parameters }}file/task-settings/document-normalizer-task-settings.html" class="otherLinkColour">DocumentNormalizer Task Settings</a></li>
-                    </ul>
-            </li>
-            <li><a href="{{ site.parameters }}file/image-parameter.html" class="otherLinkColour">Image Parameter Object</a></li>
-            <li><a href="{{ site.parameters }}file/auxiliary/index.mhtml" class="otherLinkColour">Auxiliary Settings</a>
-                    <ul>
-                            <li><a href="{{ site.parameters }}file/auxiliary/global-parameter.html" class="otherLinkColour">Global Parameter</a></li>
-                    </ul>
-            </li>
-    </ul>
+<li><a href="{{ site.dcv_parameters }}file/index.html" class="otherLinkColour">Parameter Organization</a>
+        <ul>
+                <li><a href="{{ site.dcv_parameters }}file/capture-vision-template.html"
+                                class="otherLinkColour">CaptureVisionTemplate Object</a></li>
+                <li><a href="{{ site.dcv_parameters }}file/image-source.html" class="otherLinkColour">ImageSource Object</a>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/target-roi-definition/index.html"
+                                class="otherLinkColour">TargetROIDef Object</a>
+                        <ul>
+                                <li><a href="{{ site.dcv_parameters }}file/target-roi-definition/location/index.html"
+                                                class="otherLinkColour">Location</a></li>
+                                <li><a href="{{ site.dcv_parameters }}file/target-roi-definition/location/reference-object-filter.html"
+                                                class="otherLinkColour">Reference Object Filter</a></li>
+                        </ul>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/task-settings/index.html" class="otherLinkColour">Task
+                                Settings</a>
+                        <ul>
+                                <li><a href="{{ site.dcv_parameters }}file/task-settings/document-normalizer-task-settings.html"
+                                                class="otherLinkColour">DocumentNormalizer Task Settings</a></li>
+                        </ul>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/image-parameter.html" class="otherLinkColour">Image Parameter
+                                Object</a></li>
+                <li><a href="{{ site.dcv_parameters }}file/auxiliary/index.mhtml" class="otherLinkColour">Auxiliary
+                                Settings</a>
+                        <ul>
+                                <li><a href="{{ site.dcv_parameters }}file/auxiliary/global-parameter.html"
+                                                class="otherLinkColour">Global Parameter</a></li>
+                        </ul>
+                </li>
+        </ul>
+</li>
+
+<li><a href="{{ site.dcv_parameters }}structure-and-interfaces-of-dcv_parameters.html" class="otherLinkColour">Parameter
+                Organization</a>
+        <ul>
+                <li><a href="{{ site.dcv_parameters }}file/capture-vision-template.html"
+                                class="otherLinkColour">CaptureVisionTemplate Object</a></li>
+                <li><a href="{{ site.dcv_parameters }}file/image-source.html" class="otherLinkColour">ImageSource
+                                Object</a>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/target-roi-definition/index.html"
+                                class="otherLinkColour">TargetROIDef
+                                Object</a>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/task-settings/barcode-reader-task-settings.html"
+                                class="otherLinkColour">BarcodeReader Task Settings</a>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/image-parameter.html" class="otherLinkColour">Image Parameter
+                                Object</a>
+                </li>
+                <li><a href="{{ site.dcv_parameters }}file/auxiliary/index.mhtml" class="otherLinkColour">Auxiliary
+                                Settings</a>
+                        <ul>
+                                <li><a href="{{ site.dcv_parameters }}file/auxiliary/barcode-format-specification.html"
+                                                class="otherLinkColour">Barcode Format Specification</a>
+                                </li>
+                                <li><a href="{{ site.dcv_parameters }}file/auxiliary/global-parameter.html"
+                                                class="otherLinkColour">Global
+                                                Parameter</a></li>
+                        </ul>
+                </li>
+        </ul>
 </li>
