--- a/_includes/sidelist-parameters-organization.html
+++ b/_includes/sidelist-parameters-organization.html
@@ -1,4 +1,4 @@
-<li><a href="{{ site.dcv_parameters }}structure-and-interfaces-of-dcv_parameters.html" class="otherLinkColour">Parameter
+<li><a href="{{ site.parameters_ddn }}parameter-organization-structure.html" class="otherLinkColour">Parameter
                 Organization</a>
         <ul>
                 <li><a href="{{ site.dcv_parameters }}file/capture-vision-template.html"
