--- a/_includes/sidelist-parameters-reference.html
+++ b/_includes/sidelist-parameters-reference.html
@@ -2,69 +2,69 @@
     <ul>
         <li><a class="otherLinkColour ">Capture Vision Template</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}output-raw-image.html" class="otherLinkColour">OutputRawImage</a></li>
-                <li><a href="{{ site.parameters_reference }}max-parallel-tasks.html" class="otherLinkColour">MaxParallelTasks</a></li>
-                <li><a href="{{ site.parameters_reference }}timeout.html" class="otherLinkColour">Timeout</a></li>
+                <li><a href="{{ site.parameters_reference }}capture-vision-templateoutput-raw-image.html" class="otherLinkColour">OutputRawImage</a></li>
+                <li><a href="{{ site.parameters_reference }}capture-vision-templatemax-parallel-tasks.html" class="otherLinkColour">MaxParallelTasks</a></li>
+                <li><a href="{{ site.parameters_reference }}capture-vision-templatetimeout.html" class="otherLinkColour">Timeout</a></li>
             </ul>        
         </li>
         <li><a class="otherLinkColour ">Target ROI Def</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}location.html" class="otherLinkColour">Location</a></li>
-                <li><a href="{{ site.parameters_reference }}pause-flag.html" class="otherLinkColour">PauseFlag</a></li>
-                <li><a href="{{ site.parameters_reference }}base-target-roidef-name.html" class="otherLinkColour">BaseTargetROIDefName</a></li>
+                <li><a href="{{ site.parameters_reference }}target-roi-def/location.html" class="otherLinkColour">Location</a></li>
+                <li><a href="{{ site.parameters_reference }}target-roi-def/pause-flag.html" class="otherLinkColour">PauseFlag</a></li>
+                <li><a href="{{ site.parameters_reference }}target-roi-def/base-target-roidef-name.html" class="otherLinkColour">BaseTargetROIDefName</a></li>
             </ul>        
         </li>
         <li><a class="otherLinkColour ">Document Normalizer Task Setting</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}corner-predetection-modes.html" class="otherLinkColour">CornerPredetectionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}line-extraction-modes.html" class="otherLinkColour">LineExtractionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}brightness.html" class="otherLinkColour">Brightness</a></li>
-                <li><a href="{{ site.parameters_reference }}colour-mode.html" class="otherLinkColour">ColourMode</a></li>
-                <li><a href="{{ site.parameters_reference }}content-type.html" class="otherLinkColour">ContentType</a></li>
-                <li><a href="{{ site.parameters_reference }}contrast.html" class="otherLinkColour">Contrast</a></li>
-                <li><a href="{{ site.parameters_reference }}deskew-mode.html" class="otherLinkColour">DeskewMode</a></li>
-                <li><a href="{{ site.parameters_reference }}interior-angle-range-array.html" class="otherLinkColour">InteriorAngleRangeArray</a></li>
-                <li><a href="{{ site.parameters_reference }}page-size.html" class="otherLinkColour">PageSize</a></li>
-                <li><a href="{{ site.parameters_reference }}quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}base-document-normalizer-task-setting-name.html" class="otherLinkColour">BaseDocumentNormalizerTaskSettingName</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/corner-predetection-modes.html" class="otherLinkColour">CornerPredetectionModes</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/line-extraction-modes.html" class="otherLinkColour">LineExtractionModes</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/brightness.html" class="otherLinkColour">Brightness</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/colour-mode.html" class="otherLinkColour">ColourMode</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/content-type.html" class="otherLinkColour">ContentType</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/contrast.html" class="otherLinkColour">Contrast</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/deskew-mode.html" class="otherLinkColour">DeskewMode</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/interior-angle-range-array.html" class="otherLinkColour">InteriorAngleRangeArray</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/page-size.html" class="otherLinkColour">PageSize</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/base-document-normalizer-task-setting-name.html" class="otherLinkColour">BaseDocumentNormalizerTaskSettingName</a></li>
             </ul>        
         </li>
         <li><a class="otherLinkColour ">ImageParameter</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}binarization-modes.html" class="otherLinkColour">BinarizationModes</a></li>
-                <li><a href="{{ site.parameters_reference }}colour-conversion-modes.html" class="otherLinkColour">ColourConversionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}scale-up-modes.html" class="otherLinkColour">ScaleUpModes</a></li>
-                <li><a href="{{ site.parameters_reference }}grayscale-enhancement-modes.html" class="otherLinkColour">GrayscaleEnhancementModes</a></li>
-                <li><a href="{{ site.parameters_reference }}grayscale-transformation-modes.html" class="otherLinkColour">GrayscaleTransformationModes</a></li>
-                <li><a href="{{ site.parameters_reference }}texture-detection-modes.html" class="otherLinkColour">TextureDetectionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}region-predetection-modes.html" class="otherLinkColour">RegionPredetectionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}text-detection-mode.html" class="otherLinkColour">TextDetectionMode</a></li>
-                <li><a href="{{ site.parameters_reference }}colour-channel-usage-type.html" class="otherLinkColour">ColourChannelUsageType</a></li>
-                <li><a href="{{ site.parameters_reference }}scale-down-threshold.html" class="otherLinkColour">ScaleDownThreshold</a></li>
-                <li><a href="{{ site.parameters_reference }}if-erase-text-zone.html" class="otherLinkColour">IfEraseTextZone</a></li>
-                <li><a href="{{ site.parameters_reference }}base-image-parameter-name.html" class="otherLinkColour">BaseImageParameterName</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/binarization-modes.html" class="otherLinkColour">BinarizationModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/colour-conversion-modes.html" class="otherLinkColour">ColourConversionModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/scale-up-modes.html" class="otherLinkColour">ScaleUpModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/grayscale-enhancement-modes.html" class="otherLinkColour">GrayscaleEnhancementModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/grayscale-transformation-modes.html" class="otherLinkColour">GrayscaleTransformationModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/texture-detection-modes.html" class="otherLinkColour">TextureDetectionModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/region-predetection-modes.html" class="otherLinkColour">RegionPredetectionModes</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/text-detection-mode.html" class="otherLinkColour">TextDetectionMode</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/colour-channel-usage-type.html" class="otherLinkColour">ColourChannelUsageType</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/scale-down-threshold.html" class="otherLinkColour">ScaleDownThreshold</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/if-erase-text-zone.html" class="otherLinkColour">IfEraseTextZone</a></li>
+                <li><a href="{{ site.parameters_reference }}image-parameter/base-image-parameter-name.html" class="otherLinkColour">BaseImageParameterName</a></li>
             </ul>        
         </li>
-        <li><a class="otherLinkColour ">Image Source</a>
+        <li><a class="otherLinkColour ">Image Source Options</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}type.html" class="otherLinkColour">Type</a></li>
-                <li><a href="{{ site.parameters_reference }}file-filter.html" class="otherLinkColour">FileFilter</a></li>
-                <li><a href="{{ site.parameters_reference }}recursive.html" class="otherLinkColour">Recursive</a></li>
-                <li><a href="{{ site.parameters_reference }}pdf-reading-mode.html" class="otherLinkColour">PDFReadingMode</a></li>
+                <li><a href="{{ site.parameters_reference }}image-source-options/type.html" class="otherLinkColour">Type</a></li>
+                <li><a href="{{ site.parameters_reference }}image-source-options/file-filter.html" class="otherLinkColour">FileFilter</a></li>
+                <li><a href="{{ site.parameters_reference }}image-source-options/recursive.html" class="otherLinkColour">Recursive</a></li>
+                <li><a href="{{ site.parameters_reference }}image-source-options/pdf-reading-mode.html" class="otherLinkColour">PDFReadingMode</a></li>
             </ul>        
         </li>
         <li><a class="otherLinkColour ">Global Parameter</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}max-total-image-dimension.html" class="otherLinkColour">MaxTotalImageDimension</a></li>
+                <li><a href="{{ site.parameters_reference }}global-parameter/max-total-image-dimension.html" class="otherLinkColour">MaxTotalImageDimension</a></li>
             </ul>        
         </li>
         <li><a class="otherLinkColour ">Shared Parameter</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}max-threads-in-one-task.html" class="otherLinkColour">MaxThreadsInOneTask</a></li>
-                <li><a href="{{ site.parameters_reference }}section-image-parameter-array.html" class="otherLinkColour">SectionImageParameterArray</a></li>
-                <li><a href="{{ site.parameters_reference }}start-section.html" class="otherLinkColour">StartSection</a></li>
-                <li><a href="{{ site.parameters_reference }}terminate-setting.html" class="otherLinkColour">TerminateSetting</a></li>
-                <li><a href="{{ site.parameters_reference }}directory-path.html" class="otherLinkColour">DirectoryPath</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/max-threads-in-one-task.html" class="otherLinkColour">MaxThreadsInOneTask</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/section-image-parameter-array.html" class="otherLinkColour">SectionImageParameterArray</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/start-section.html" class="otherLinkColour">StartSection</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/terminate-setting.html" class="otherLinkColour">TerminateSetting</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/directory-path.html" class="otherLinkColour">DirectoryPath</a></li>
             </ul>        
         </li>
     </ul>
