--- a/_includes/sidelist-parameters-reference.html
+++ b/_includes/sidelist-parameters-reference.html
@@ -48,7 +48,7 @@
                 <li><a href="{{ site.parameters_reference }}image-parameter/texture-detection-modes.html" class="otherLinkColour">TextureDetectionModes</a></li>
             </ul>        
         </li>
-        <li><a class="otherLinkColour ">Image Source Options</a>
+        <li><a class="otherLinkColour ">Image Source</a>
             <ul>
                 <li><a href="{{ site.parameters_reference }}image-source-options/file-filter.html" class="otherLinkColour">FileFilter</a></li>
                 <li><a href="{{ site.parameters_reference }}image-source-options/pdf-reading-mode.html" class="otherLinkColour">PDFReadingMode</a></li>
