--- a/_includes/sidelist-parameters-reference.html
+++ b/_includes/sidelist-parameters-reference.html
@@ -5,7 +5,7 @@
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/image-roi-processing-name-array.html" class="otherLinkColour">ImageROIProcessingNameArray</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/image-source-name.html" class="otherLinkColour">ImageSourceName</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/max-parallel-tasks.html" class="otherLinkColour">MaxParallelTasks</a></li>
-                <li><a href="{{ site.parameters_reference }}capture-vision-template/output-raw-Image.html" class="otherLinkColour">OutputRawImage</a></li>
+                <li><a href="{{ site.parameters_reference }}capture-vision-template/output-original-Image.html" class="otherLinkColour">OutputOriginalImage</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/semantic-processing-name-array.html" class="otherLinkColour">SemanticProcessingNameArray</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/timeout.html" class="otherLinkColour">Timeout</a></li>
             </ul>        
