--- a/_includes/sidelist-parameters-reference-v2.0.0.html
+++ b/_includes/sidelist-parameters-reference-v2.0.0.html
@@ -5,7 +5,7 @@
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/image-roi-processing-name-array.html" class="otherLinkColour">ImageROIProcessingNameArray</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/image-source-name.html" class="otherLinkColour">ImageSourceName</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/max-parallel-tasks.html" class="otherLinkColour">MaxParallelTasks</a></li>
-                <li><a href="{{ site.parameters_reference }}capture-vision-template/output-original-Image.html" class="otherLinkColour">OutputOriginalImage</a></li>
+                <li><a href="{{ site.parameters_reference }}capture-vision-template/output-raw-Image.html" class="otherLinkColour">OutputRawImage</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/semantic-processing-name-array.html" class="otherLinkColour">SemanticProcessingNameArray</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/timeout.html" class="otherLinkColour">Timeout</a></li>
             </ul>        
@@ -25,7 +25,7 @@
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/colour-mode.html" class="otherLinkColour">ColourMode</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/content-type.html" class="otherLinkColour">ContentType</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/contrast.html" class="otherLinkColour">Contrast</a></li>
-                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/corner-angle-range.html" class="otherLinkColour">CornerAngleRange</a></li>
+                <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/corner-angle-range-array.html" class="otherLinkColour">CornerAngleRangeArray</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/deskew-mode.html" class="otherLinkColour">DeskewMode</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/line-extraction-modes.html" class="otherLinkColour">LineExtractionModes</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/page-size.html" class="otherLinkColour">PageSize</a></li>
