--- a/_includes/sidelist-license.html
+++ b/_includes/sidelist-license.html
@@ -1,1 +1,1 @@
-<li><a href="{{ site.license }}license-activation.html" class="otherLinkColour">License Activation</a></li>
+<li><a href="{{ site.license }}" class="otherLinkColour">License Activation</a></li>
