--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -30,7 +30,12 @@
                             <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                         </li>
                     </ul>
-                    <a class="downloadBtn fr hide-lg textUpperCase" href="{{site.download}}">Download Free Trial</a>
+                    <div class="trialAndPricing fr">
+                        <ul class="menuList">
+                            <li class="item textUpperCase"><a href="{{site.download}}">Free Trial</a></li>
+                        </ul>
+                        <a class="downloadBtn fr hide-lg textUpperCase" href="https://www.dynamsoft.com/document-normalizer/ask-for-quote/">Get Pricing</a>
+                    </div>
                 </div>
             </div>
         </div>
