--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -60,8 +60,14 @@
                             <li class="item overview">
                                 <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
                             </li> -->
-                            <li class="item overview">
+                            <li class="item">
                                 <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
+                            </li>
+                            <li class="item">
+                                <a class="textUpperCase" href="https://www.dynamsoft.com/document-normalizer/ask-for-quote/">Get Pricing</a>
+                            </li>
+                            <li class="item">
+                                <a class="textUpperCase" href="{{site.download}}">Free Trial</a>
                             </li>
                         </ul>
                     </div>
