--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -53,7 +53,7 @@
                     <div class="col-xs-12">
                         <ul class="menuList">
                             <!---->
-                            <li class="title"><a class="orangeLink" href="{{site.docHomePage}}">Dynamsoft Document Normalizer</a></li>
+                            <!-- <li class="title"><a class="orangeLink" href="{{site.docHomePage}}">Dynamsoft Document Normalizer</a></li> -->
                             <!-- <li class="item overview">
                                 <a class="textUpperCase" href="{{site.overview}}">Overview</a>
                             </li>
