--- a/_layouts/search-page.html
+++ b/_layouts/search-page.html
@@ -108,9 +108,9 @@
   }
 </style>
 <body>
-    <div class="headWrapper">
-        {%- include page_header.html -%}
-    </div>
+    {% assign url = 'https://www.dynamsoft.com/shared/head/' %}
+    {% remote_include {{ url }} %}
+
     {%- include ddnNav.html -%}
     <div class="container" id="searchContent">
       <div class="row">
