--- a/_includes/sidelist-parameters-reference-v2.0.11.html
+++ b/_includes/sidelist-parameters-reference-v2.0.11.html
@@ -2,11 +2,9 @@
     <ul>
         <li><a class="otherLinkColour ">Capture Vision Template</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}capture-vision-template/name.html" class="otherLinkColour">Name</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/image-roi-processing-name-array.html" class="otherLinkColour">ImageROIProcessingNameArray</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/image-source-name.html" class="otherLinkColour">ImageSourceName</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/max-parallel-tasks.html" class="otherLinkColour">MaxParallelTasks</a></li>
-                <li><a href="{{ site.parameters_reference }}capture-vision-template/min-image-capture-interval.html" class="otherLinkColour">MinImageCaptureInterval</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/output-original-Image.html" class="otherLinkColour">OutputOriginalImage</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/semantic-processing-name-array.html" class="otherLinkColour">SemanticProcessingNameArray</a></li>
                 <li><a href="{{ site.parameters_reference }}capture-vision-template/timeout.html" class="otherLinkColour">Timeout</a></li>
@@ -14,7 +12,6 @@
         </li>
         <li><a class="otherLinkColour ">Target ROI Def</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}target-roi-def/name.html" class="otherLinkColour">Name</a></li>
                 <li><a href="{{ site.parameters_reference }}target-roi-def/base-target-roidef-name.html" class="otherLinkColour">BaseTargetROIDefName</a></li>
                 <li><a href="{{ site.parameters_reference }}target-roi-def/location.html" class="otherLinkColour">Location</a></li>
                 <li><a href="{{ site.parameters_reference }}target-roi-def/pause-flag.html" class="otherLinkColour">PauseFlag</a></li>
@@ -23,7 +20,6 @@
         </li>
         <li><a class="otherLinkColour ">Document Normalizer Task Setting</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}target-roi-def/name.html" class="otherLinkColour">Name</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/base-document-normalizer-task-setting-name.html" class="otherLinkColour">BaseDocumentNormalizerTaskSettingName</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/brightness.html" class="otherLinkColour">Brightness</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/colour-mode.html" class="otherLinkColour">ColourMode</a></li>
@@ -34,15 +30,10 @@
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/line-extraction-modes.html" class="otherLinkColour">LineExtractionModes</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/page-size.html" class="otherLinkColour">PageSize</a></li>
                 <li><a href="{{ site.parameters_reference }}document-normalizer-task-settings/quadrilateral-detection-modes.html" class="otherLinkColour">QuadrilateralDetectionModes</a></li>
-                <li><a href="{{ site.parameters_reference }}shared-parameter/max-threads-in-one-task.html" class="otherLinkColour">MaxThreadsInOneTask</a></li>
-                <li><a href="{{ site.parameters_reference }}shared-parameter/section-image-parameter-array.html" class="otherLinkColour">SectionImageParameterArray</a></li>
-                <li><a href="{{ site.parameters_reference }}shared-parameter/start-section.html" class="otherLinkColour">StartSection</a></li>
-                <li><a href="{{ site.parameters_reference }}shared-parameter/terminate-setting.html" class="otherLinkColour">TerminateSetting</a></li>
             </ul>        
         </li>
         <li><a class="otherLinkColour ">ImageParameter</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}target-roi-def/name.html" class="otherLinkColour">Name</a></li>
                 <li><a href="{{ site.parameters_reference }}image-parameter/base-image-parameter-name.html" class="otherLinkColour">BaseImageParameterName</a></li>
                 <li><a href="{{ site.parameters_reference }}image-parameter/binarization-modes.html" class="otherLinkColour">BinarizationModes</a></li>
                 <li><a href="{{ site.parameters_reference }}image-parameter/colour-channel-usage-type.html" class="otherLinkColour">ColourChannelUsageType</a></li>
@@ -59,7 +50,6 @@
         </li>
         <li><a class="otherLinkColour ">Image Source</a>
             <ul>
-                <li><a href="{{ site.parameters_reference }}target-roi-def/name.html" class="otherLinkColour">Name</a></li>
                 <li><a href="{{ site.parameters_reference }}image-source-options/file-filter.html" class="otherLinkColour">FileFilter</a></li>
                 <li><a href="{{ site.parameters_reference }}image-source-options/pdf-reading-mode.html" class="otherLinkColour">PDFReadingMode</a></li>
                 <li><a href="{{ site.parameters_reference }}image-source-options/recursive.html" class="otherLinkColour">Recursive</a></li>
@@ -69,6 +59,16 @@
         <li><a class="otherLinkColour ">Global Parameter</a>
             <ul>
                 <li><a href="{{ site.parameters_reference }}global-parameter/max-total-image-dimension.html" class="otherLinkColour">MaxTotalImageDimension</a></li>
+            </ul>        
+        </li>
+        <li><a class="otherLinkColour ">Shared Parameter</a>
+            <ul>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/directory-path.html" class="otherLinkColour">DirectoryPath</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/max-threads-in-one-task.html" class="otherLinkColour">MaxThreadsInOneTask</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/name.html" class="otherLinkColour">Name</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/section-image-parameter-array.html" class="otherLinkColour">SectionImageParameterArray</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/start-section.html" class="otherLinkColour">StartSection</a></li>
+                <li><a href="{{ site.parameters_reference }}shared-parameter/terminate-setting.html" class="otherLinkColour">TerminateSetting</a></li>
             </ul>        
         </li>
     </ul>
