update to internal commit 31a4987a

--- a/_includes/ddnNav.html
+++ b/_includes/ddnNav.html
@@ -18,24 +18,13 @@
             <div class="row">
                 <div class="col-xs-12">
                     <ul class="menuList">
-                        <!---->
                         <li class="title"><a class="orangeLink" href="{{site.docHomePage}}">Dynamsoft Document Normalizer</a></li>
-                        <!-- <li class="item overview">
-                            <a class="textUpperCase" href="{{site.overview}}">Overview</a>
-                        </li>
-                        <li class="item overview">
-                            <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
-                        </li> -->
                         <li class="item overview">
                             <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                         </li>
                     </ul>
-                    <div class="trialAndPricing fr">
-                        <ul class="menuList">
-                            <li class="item textUpperCase"><a href="{{site.download}}">Free Trial</a></li>
-                        </ul>
-                        <a class="downloadBtn fr hide-lg textUpperCase" href="https://www.dynamsoft.com/document-normalizer/ask-for-quote/">Get Pricing</a>
-                    </div>
+                    <a href="https://www.dynamsoft.com/document-normalizer/ask-for-quote/" class="downloadBtn fr">Get Pricing</a>
+                    <a href="https://www.dynamsoft.com/document-normalizer/downloads/" target="_blank" class="downloadBtn borderBtn fr">Download <span class="hide-md">30-Day Trial</span></a>
                 </div>
             </div>
         </div>
@@ -52,14 +41,6 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <ul class="menuList">
-                            <!---->
-                            <!-- <li class="title"><a class="orangeLink" href="{{site.docHomePage}}">Dynamsoft Document Normalizer</a></li> -->
-                            <!-- <li class="item overview">
-                                <a class="textUpperCase" href="{{site.overview}}">Overview</a>
-                            </li>
-                            <li class="item overview">
-                                <a class="textUpperCase" href="{{site.frontPageFolder}}">Release Notes</a>
-                            </li> -->
                             <li class="item">
                                 <a class="textUpperCase" href="{{site.docHomePage}}">Documentation</a>
                             </li>
